# objdetection

./: main.py
sam2/: .gitignore  main.py  multi_image_batch_train.py  single_pic_inference.py  train_model.py  yolo_sam2_pipline.py
sam2/python-core/: app.py  yolo_sam2_pipline.py
sam2/python-core/bridge/: __init__.py  rust_frame_bridge.py  rust_logger_bridge.py
sam2/python-core/extractors/: __init__.py  base.py  content.py
sam2/python-core/models/: frame.py
sam2/python-core/services/: base.py  message.py  message_bus.py
sam2/python-core/services/collector/: service.py
sam2/python-core/services/extractor/: __init__.py  service.py
sam2/python-core/services/extractor/extractors/: base.py  content.py
sam2/python-core/services/processor/: service.py
sam2/python-core/utils/: logger_config.py
sam2/rust_bridge/src/: lib.rs
sam2/rust_bridge/src/config/: frame.rs  logging.rs  mod.rs
sam2/rust_bridge/src/frame/: frame.rs  mod.rs
sam2/rust_bridge/src/logging/: logger.rs
sam2/rust_core/: Cargo.toml
sam2/rust_core/src/: lib.rs  logger.rs
sam2/rust_core/src/config/: error.rs  frame_config.rs  mod.rs
