[package]
name = "sam2_rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "sam2_rust_core"

[dependencies]
pyo3 = { version = "0.23.2", features = ["extension-module", "abi3-py38"]}
numpy = {version = "0.22.1", features = ["nalgebral"]}

serde = {version = "1.0.215", features= ["derive"]}
serde_json = "1.0.133"

image = "0.25.5"
imageproc = "0.25.0"

rayon = "1.10.0"

thiserror = "2.0.3"
anyhow = "1.0.93"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"

log = "0.4.22"

[dev-dependencies]
criterion = "0.5.1"
